src/commands/snapshots/udb__commands__elf__tests__core_header.snap
---
source: src/commands/elf.rs
expression: s
---
type                 core file  
little endian        true       
64-bit               true       
osabi                Linux      
abiversion           0          
machine              AMD x86-64 
flags                0          
ph_offset            64         
num_ph_entries       24         
section_offset       0          
num_section_entries  0          
string_table_index   0          

type                 core file  
little endian        true       
64-bit               true       
osabi                Linux      
abiversion           0          
machine              AMD x86-64 
flags                0          
ph_offset            64         
num_ph_entries       24         
section_offset       0          
num_section_entries  0          
string_table_index   0
