src/commands/snapshots/udb__commands__elf__tests__core_segs.snap
---
source: src/commands/elf.rs
expression: s
---
type  offset             vaddr  file size  memory size  flags 
----  ------             -----  ---------  -----------  ----- 
Note     580                 0        d6c            0    --- 
Load    2000      55957a492000       1000         1000    --r 
Load    3000      55957a493000          0         1000    x-r 
Load    3000      55957a494000          0         1000    --r 
Load    3000      55957a495000       1000         1000    --r 
Load    4000      55957a496000       1000         1000    -wr 
Load    5000      7ff8fc09a000       3000         3000    -wr 
Load    8000      7ff8fc09d000       1000        28000    --r 
Load    9000      7ff8fc0c5000          0       195000    x-r 
Load    9000      7ff8fc25a000          0        58000    --r 
Load    9000      7ff8fc2b2000          0         1000    --- 
Load    9000      7ff8fc2b3000       4000         4000    --r 
Load    d000      7ff8fc2b7000       2000         2000    -wr 
Load    f000      7ff8fc2b9000       d000         d000    -wr 
Load   1c000      7ff8fc2cc000       2000         2000    -wr 
Load   1e000      7ff8fc2ce000       1000         2000    --r 
Load   1f000      7ff8fc2d0000          0        2a000    x-r 
Load   1f000      7ff8fc2fa000          0         b000    --r 
Load   1f000      7ff8fc306000       2000         2000    --r 
Load   21000      7ff8fc308000       2000         2000    -wr 
Load   23000      7fffdd394000      21000        21000    -wr 
Load   44000      7fffdd3f3000       4000         4000    --r 
Load   48000      7fffdd3f7000       2000         2000    x-r 
Load   4a000  ffffffffff600000       1000         1000    x-- 

type  offset             vaddr  file size  memory size  flags 
----  ------             -----  ---------  -----------  ----- 
Note     580                 0        d78            0    --- 
Load    2000      55d1a7821000       1000         1000    --r 
Load    3000      55d1a7822000          0         1000    x-r 
Load    3000      55d1a7823000          0         1000    --r 
Load    3000      55d1a7824000       1000         1000    --r 
Load    4000      55d1a7825000       1000         1000    -wr 
Load    5000      7f9c7074a000       3000         3000    -wr 
Load    8000      7f9c7074d000       1000        28000    --r 
Load    9000      7f9c70775000          0       195000    x-r 
Load    9000      7f9c7090a000          0        58000    --r 
Load    9000      7f9c70962000          0         1000    --- 
Load    9000      7f9c70963000       4000         4000    --r 
Load    d000      7f9c70967000       2000         2000    -wr 
Load    f000      7f9c70969000       d000         d000    -wr 
Load   1c000      7f9c7097c000       2000         2000    -wr 
Load   1e000      7f9c7097e000       1000         2000    --r 
Load   1f000      7f9c70980000          0        2a000    x-r 
Load   1f000      7f9c709aa000          0         b000    --r 
Load   1f000      7f9c709b6000       2000         2000    --r 
Load   21000      7f9c709b8000       2000         2000    -wr 
Load   23000      7ffdb3b63000      21000        21000    -wr 
Load   44000      7ffdb3bcb000       4000         4000    --r 
Load   48000      7ffdb3bcf000       2000         2000    x-r 
Load   4a000  ffffffffff600000       1000         1000    x--
